...
                                            <color key="titleColor" red="0.40784313729999999" green="0.69411764710000001" blue="0.19215686269999999" alpha="1" colorSpace="calibratedRGB"/>
                                        </state>
                                        <connections>
                                            <action selector="messageBtnAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="CiE-Qe-LUM"/>
                                        </connections>
                                    </button>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="message" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cuy-k6-q6S">
                                        <rect key="frame" x="1.5" y="69" width="47" height="13.5"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                </subviews>
...
                                            <color key="titleColor" red="0.40784313729999999" green="0.69411764710000001" blue="0.19215686269999999" alpha="1" colorSpace="calibratedRGB"/>
                                        </state>
                                        <connections>
                                            <action selector="callBtnAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Mxw-zU-ns1"/>
                                        </connections>
                                    </button>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="call" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rHW-AW-qc7">
                                        <rect key="frame" x="16" y="69" width="18.5" height="13.5"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                </subviews>
...
                                            <color key="titleColor" red="0.40784313729999999" green="0.69411764710000001" blue="0.19215686269999999" alpha="1" colorSpace="calibratedRGB"/>
                                        </state>
                                        <connections>
                                            <action selector="emailBtnAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="ciI-oz-45s"/>
                                        </connections>
                                    </button>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uw3-Y9-yQ6">
                                        <rect key="frame" x="11" y="69" width="28" height="13.5"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                </subviews>
...
                                            <color key="titleColor" red="0.40784313729999999" green="0.69411764710000001" blue="0.19215686269999999" alpha="1" colorSpace="calibratedRGB"/>
                                        </state>
                                        <connections>
                                            <action selector="favouriteBtnAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="3PB-ob-piR"/>
                                        </connections>
                                    </button>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="favourite" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8VE-Fe-Dkr">
                                        <rect key="frame" x="2" y="69" width="46.5" height="13.5"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                </subviews>
...
