...
    }
    
    //MARK:- Private Methods

    private func setupScreen() {
        
        self.title = "Contact"
        view.signatureThemify()
        setupTableView()
    }
    
    private func setupTableView() {
        tableView = UITableView.getSignatureTableView(with: view.frame)
...
        tableView.dataSource = self
        tableView.isHidden = true
    }
    
    private func setupNavBar() {
        let addItem = UIBarButtonItem(barButtonSystemItem: UIBarButtonItem.SystemItem.add, target: self, action: #selector(ContactListViewController.addTapped))
        addItem.accessibilityIdentifier = "add_bar_button"
        navigationItem.rightBarButtonItem = addItem
    }
    
    //MARK:- Acions
    
    @objc private func addTapped() {
...
